--- a/quickbooks_online_odoo_connector/views/qb_partner_mapping.xml
+++ b/quickbooks_online_odoo_connector/views/qb_partner_mapping.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Form view (optional, but useful if you want to open records) -->
     <record id="view_qbo_partner_map_form" model="ir.ui.view">
         <field name="name">qbo.partner.map.vts.form</field>
         <field name="model">qbo.partner.map.vts</field>
@@ -8,6 +7,7 @@
             <form string="Quickbooks Partner Map">
                 <sheet>
                     <group>
+                        <field name="quickbook_instance_id" readonly="1"/>
                         <field name="quickbook_id" readonly="1"/>
                         <field name="quick_name" readonly="1"/>
                         <field name="partner_id"/>
@@ -19,12 +19,13 @@
         </field>
     </record>
 
-    <!-- List (tree) view -->
+    <!-- List view -->
     <record id="view_qbo_partner_map_list" model="ir.ui.view">
         <field name="name">qbo.partner.map.vts.list</field>
         <field name="model">qbo.partner.map.vts</field>
         <field name="arch" type="xml">
             <list string="Quickbooks Partner Map" editable="bottom">
+                <field name="quickbook_instance_id" readonly="1"/>
                 <field name="quickbook_id" readonly="1"/>
                 <field name="quick_name" readonly="1"/>
                 <field name="partner_id"/>
@@ -34,7 +35,7 @@
     </record>
 
 
-    <!-- Action to open the view -->
+    <!-- Action view -->
     <record id="action_qbo_partner_map" model="ir.actions.act_window">
         <field name="name">Quickbooks Partner Map</field>
         <field name="res_model">qbo.partner.map.vts</field>
@@ -63,7 +64,7 @@
 
 
     <menuitem id="menu_qbo_partner_map"
-              name="Partner Map"
+              name="Partner"
               parent="quickbooks_online_odoo_connector.main_mapping_menu"
               action="action_qbo_partner_map" sequence="1"/>
 
