--- a/quickbooks_online_odoo_connector/views/quickbook_view.xml
+++ b/quickbooks_online_odoo_connector/views/quickbook_view.xml
@@ -59,7 +59,7 @@
         <field name="name">Quickbook Customer</field>
         <field name="res_model">res.partner</field>
         <field name="view_id" ref="base.view_partner_tree"/>
-        <!-- <field name="domain">[('quickbooks_instance_id', '=', active_id)]</field> -->
+        <field name="domain">[('qck_instance_id', '=', active_id)]</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Quickbooks Customer will display here
