--- a/quickbooks_connector_vts/wizard/quickbook_operations_view.xml
+++ b/quickbooks_connector_vts/wizard/quickbook_operations_view.xml
@@ -48,7 +48,7 @@
                         <br/>
                         <group>
                             <group>
-                                <field name="quickbook_instance_id" readonly="1"/>
+                                <field name="quickbook_instance_id" invisible="1"/>
                                 <field name="quickbook_operation" widget="radio"/>
                                 <field name="import_operations" widget="radio"/>
                             </group>
