--- a/quickbooks_connector_vts/wizard/quickbook_operations_view.xml
+++ b/quickbooks_connector_vts/wizard/quickbook_operations_view.xml
@@ -49,6 +49,7 @@
                         <group>
                             <group>
                                 <field name="quickbook_instance_id" readonly="1"/>
+                                <field name="create_records"/>
                                 <field name="quickbook_operation" widget="radio"/>
                                 <field name="import_operations" widget="radio"/>
                             </group>
