--- a/quickbooks_connector_vts/wizard/quickbook_operations_view.xml
+++ b/quickbooks_connector_vts/wizard/quickbook_operations_view.xml
@@ -50,6 +50,7 @@
                             <group>
                                 <field name="quickbook_instance_id" readonly="1"/>
                                 <field name="quickbook_operation" widget="radio"/>
+                                <field name="create_records"/>
                                 <field name="import_operations" widget="radio"/>
                             </group>
                             <group>
