[ADD] Added filter and group by for quickbooks.

--- a/quickbooks_connector_vts/views/partner_view.xml
+++ b/quickbooks_connector_vts/views/partner_view.xml
@@ -18,4 +18,16 @@
             </xpath>
         </field>
     </record>
+    <record id="view_res_partner_filter_inherit" model="ir.ui.view">
+        <field name="name">res.partner.filter.inherit</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="base.view_res_partner_filter"/>
+        <field name="arch" type="xml">
+            <xpath expr="//filter[@name='customer']" position="after">
+                <filter string="Quickbook Customers" name="quickbook_partners"
+                        domain="[('qck_instance_id', '!=', False)]"/>
+                <filter string="Quickbook Customers" name="group_by_Quickbook" context="{'group_by':'qck_instance_id'}"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
