--- a/quickbooks_connector_vts/views/account_account.xml
+++ b/quickbooks_connector_vts/views/account_account.xml
@@ -21,4 +21,16 @@
             </xpath>
         </field>
     </record>
+    <record id="view_account_filter_inherit" model="ir.ui.view">
+        <field name="name">account.filter.inherit</field>
+        <field name="model">account.account</field>
+        <field name="inherit_id" ref="account.view_account_search"/>
+        <field name="arch" type="xml">
+            <xpath expr="//filter[1]" position="after">
+                <filter string="Quickbook Account" name="quickbook_accounts"
+                        domain="[('qck_instance_id', '!=', False)]"/>
+                <filter string="Quickbook Account" name="group_by_Quickbook" context="{'group_by':'qck_instance_id'}"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
