--- a/quickbooks_online_odoo_connector/views/quickbooks_view.xml
+++ b/quickbooks_online_odoo_connector/views/quickbooks_view.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_quickbooks_wizard_form_inherit" model="ir.ui.view">
+    <record id="view_quickbooks_instance_form_inherit" model="ir.ui.view">
         <field name="name">quickbooks.connect.inherit.form</field>
         <field name="model">quickbooks.connect</field>
         <field name="inherit_id" ref="quickbooks_connector_vts.quickbooks_connect_form_view"/>
