--- a/quickbooks_connector_vts/views/quickbook_view.xml
+++ b/quickbooks_connector_vts/views/quickbook_view.xml
@@ -74,7 +74,7 @@
                         </group>
                         <group>
                             <field name="qk_company_id" invisible="state != 'connected'"/>
-                            <field name="company_id"/>
+                            <field name="company_id" required="1"/>
                             <field name="country_id" readonly="1"/>
                         </group>
                     </group>
