--- a/quickbooks_online_odoo_connector/views/quickbooks_view.xml
+++ b/quickbooks_online_odoo_connector/views/quickbooks_view.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='account_creation']" position="after">
                 <field name="product_creation"/>
+                <field name="company_include_tax"/>
             </xpath>
          <xpath expr="//div[@class='oe_button_box']" position="inside">
                 <button name="action_qck_product"
