--- a/quickbooks_connector_vts/views/partner_view.xml
+++ b/quickbooks_connector_vts/views/partner_view.xml
@@ -23,10 +23,15 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_res_partner_filter"/>
         <field name="arch" type="xml">
-            <xpath expr="//filter[@name='customer']" position="after">
+            <xpath expr="//filter[@name='inactive']" position="after">
+                <separator/>
                 <filter string="Quickbook Customers" name="quickbook_partners"
                         domain="[('qck_instance_id', '!=', False)]"/>
-                <filter string="Quickbook Customers" name="group_by_Quickbook" context="{'group_by':'qck_instance_id'}"/>
+            </xpath>
+            <xpath expr="//filter[@name='group_country']" position="after">
+                <separator/>
+                <filter string="Quickbook Customers" name="group_by_Quickbook"
+                        context="{'group_by':'qck_instance_id'}"/>
             </xpath>
         </field>
     </record>
