--- a/quickbooks_online_odoo_connector/views/quickbooks_view.xml
+++ b/quickbooks_online_odoo_connector/views/quickbooks_view.xml
@@ -8,9 +8,20 @@
             <xpath expr="//field[@name='account_creation']" position="after">
                 <field name="product_creation"/>
                 <field name="company_include_tax"/>
-                <field name="auto_export_moves"/>
-                <field name="export_moves_point_date" invisible="not auto_export_moves"/>
-                <field name="exp_qbk_moves_next_call_point" invisible="not auto_export_moves"/>
+            </xpath>
+            <xpath expr="//notebook" position="inside">
+                <page string="Export Configuration" name="export_configuration">
+                    <group>
+                        <group>
+                        <field name="auto_export_moves"/>
+                        <field name="export_moves_point_date" invisible="not auto_export_moves"/>
+                        </group>
+                        <group>
+                            <field name="auto_export_payments"/>
+                            <field name="exp_qbk_moves_next_call_point" invisible="not auto_export_moves"/>
+                        </group>
+                    </group>
+                </page>
             </xpath>
             <xpath expr="//div[@class='oe_button_box']" position="inside">
                 <button name="action_qck_product"
