--- a/quickbooks_connector_vts/views/quickbook_view.xml
+++ b/quickbooks_connector_vts/views/quickbook_view.xml
@@ -75,7 +75,7 @@
                         <group>
                             <field name="qk_company_id" invisible="state != 'connected'"/>
                             <field name="company_id" required="1"/>
-                            <field name="country_id" readonly="1"/>
+                            <field name="country_id" invisible="1"/>
                         </group>
                     </group>
                     <notebook>
@@ -91,8 +91,8 @@
                             	<group>
 	                                <field name="redirect_url" required="1" readonly="state == 'connected'"/>
 	                                <field name="environment" readonly="state == 'connected'"/>
-	                                <field name="quickbook_base_url" invisible="1"/>
-	                                <field name="realm_id" invisible="1"/>
+	                                <field name="quickbook_base_url" readonly="state == 'connected'"/>
+                                    <field name="realm_id" invisible="1"/>
                             	</group>
                             </group>
                         </page>
