--- a/quickbooks_connector_vts/views/quickbook_view.xml
+++ b/quickbooks_connector_vts/views/quickbook_view.xml
@@ -59,7 +59,7 @@
                         <button name="action_qck_payment_terms"
                                 type="object"
                                 class="oe_stat_button"
-                                icon="fa-dollar">
+                                icon="fa-credit-card">
                             <div class="o_field_widget o_stat_info">
                                 <span class="o_stat_text">Payment Terms</span>
                                 <span class="o_stat_value">
@@ -96,7 +96,7 @@
                             	</group>
                             </group>
                         </page>
-                        <page name="Import configuration">
+                        <page name="Import Configuration">
                             <group>
                                 <group>
                                     <field name="customer_creation"/>
